# sideblinder

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  coverage-baseline.json  entities.json  mempalace.yaml  release.toml
.cargo/: config.toml
.claude/rules/: rust.md
.github/: renovate.json5
.github/scripts/: diagnose-wdk-build.ps1  extract_release_notes.py  transform_changelog.py
.github/scripts/tests/: test_extract_release_notes.py
.github/workflows/: ci.yml  release-artifacts.yml  release.yml
config/: default.toml
crates/sideblinder-app/: Cargo.toml  README.md
crates/sideblinder-app/proptest-regressions/: config.txt
crates/sideblinder-app/src/: bridge.rs  config.rs  gui_pipe.rs  ipc.rs  lib.rs  main.rs  status.rs  tray.rs
crates/sideblinder-diag/: Cargo.toml  README.md
crates/sideblinder-diag/src/: calibrate.rs  capture.rs  main.rs  ui.rs
crates/sideblinder-driver/: Cargo.toml  Makefile.toml  README.md  build.rs
crates/sideblinder-driver/src/: ffb_handler.rs  hid_descriptor.rs  input_report.rs  ioctl.rs  lib.rs
crates/sideblinder-gui/: Cargo.toml  README.md
crates/sideblinder-gui/src/: app.rs  backend.rs  config_writer.rs  embedded_backend.rs  main.rs  pipe_backend.rs
crates/sideblinder-gui/src/ui/: axes.rs  buttons.rs  dashboard.rs  mod.rs
crates/sideblinder-hid/: Cargo.toml  README.md
crates/sideblinder-hid/src/: device.rs  enumerate.rs  input.rs
crates/sideblinder-ipc/: Cargo.toml  README.md
crates/sideblinder-ipc/src/: lib.rs
crates/sidewinder-app/: Cargo.toml
crates/sidewinder-app/src/: bridge.rs  config.rs  gui_pipe.rs  ipc.rs  lib.rs  main.rs  status.rs  tray.rs
crates/sidewinder-diag/: Cargo.toml
crates/sidewinder-diag/src/: calibrate.rs  capture.rs  main.rs  ui.rs
crates/sidewinder-driver/: Cargo.toml
crates/sidewinder-driver/src/: ffb_handler.rs  ioctl.rs  lib.rs
crates/sidewinder-gui/: Cargo.toml
crates/sidewinder-gui/src/: app.rs  backend.rs  config_writer.rs  embedded_backend.rs  main.rs  pipe_backend.rs
crates/sidewinder-gui/src/ui/: axes.rs  buttons.rs  dashboard.rs  mod.rs
crates/sidewinder-hid/: Cargo.toml
crates/sidewinder-hid/src/: device.rs  enumerate.rs  ffb.rs  hid_transport.rs  input.rs  lib.rs
crates/sidewinder-ipc/: Cargo.toml
crates/sidewinder-ipc/src/: lib.rs
docs/: KNOWN-ISSUES.md  config.md  hw-spec.md  ipc-protocol.md  troubleshooting.md  wdk-build-troubleshooting.md
docs/superpowers/plans/: 2026-04-09-sidewinder-ffb2-implementation.md  2026-04-10-coverage-ci.md  2026-04-10-release-automation.md
docs/superpowers/specs/: 2026-04-09-sidewinder-ffb2-driver-design.md  2026-04-10-coverage-ci-design.md  2026-04-10-release-automation-design.md  2026-04-10-sideblinder-1.0-design.md
scripts/: check-coverage.py  coverage-hook.sh  coverage_utils.py  install.ps1  uninstall.ps1  update-coverage-baseline.py
