[workspace]
resolver = "2"
members = [
    "crates/sideblinder-hid",
    "crates/sideblinder-app",
    "crates/sideblinder-diag",
    "crates/sideblinder-ipc",
    "crates/sideblinder-gui",
]

[workspace.package]
# Project-level release version, managed independently of individual crates.
# No crate uses version.workspace = true — each crate carries its own version.
version = "0.8.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/phaedrus1992/sideblinder"
homepage = "https://github.com/phaedrus1992/sideblinder"
authors = ["Phaedrus"]
description = "Virtual joystick driver and configuration suite for the Microsoft Sidewinder Force Feedback 2"
rust-version = "1.85"  # Rust 2024 edition requires 1.85+

[workspace.dependencies]
proptest = "1.11.0"
egui = "0.34.1"
eframe = "0.34.1"
egui_plot = "0.35"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
toml_edit = "0.25.10"
thiserror = "2.0.18"
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Pipes",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Panic prevention
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
# No cheating
allow_attributes = "deny"
# Code hygiene
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Safety
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
# Pedantic relaxations (too noisy)
module_name_repetitions = "allow"
similar_names = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
