[package]
name = "sideblinder-app"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Background service bridging the Sidewinder FF2 to the virtual UMDF2 device"
readme = "README.md"

[lints]
workspace = true

[lib]
name = "sideblinder_app"
path = "src/lib.rs"

[[bin]]
name = "sideblinder-app"
path = "src/main.rs"

[dependencies]
sideblinder-hid = { path = "../sideblinder-hid" }
sideblinder-ipc = { path = "../sideblinder-ipc" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.6.0", features = ["derive"] }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
windows-sys.workspace = true
notify = "8.2.0"

[dev-dependencies]
proptest.workspace = true
tempfile = "3.27.0"
