[package]
name = "sideblinder-diag"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Diagnostics and calibration CLI for the Microsoft Sidewinder Force Feedback 2"
readme = "README.md"

[lints]
workspace = true

[dependencies]
sideblinder-hid = { path = "../sideblinder-hid" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
windows-sys.workspace = true
ratatui = "0.30.0"
crossterm = "0.29.0"
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
tempfile = "3.27"
