[package]
name = "sideblinder-driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[package.metadata.wdk.driver-model]
driver-type = "UMDF"
umdf-version-major = 2
target-umdf-version-minor = 33

[dependencies]
wdk = "0.4.1"
wdk-sys = { version = "0.5.1", features = ["hid"] }

[build-dependencies]
wdk-build = "0.5.1"

[profile.dev]
lto = true
panic = "unwind"

[profile.release]
lto = true
panic = "unwind"
