[package]
name = "sideblinder-gui"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Settings and live-monitor GUI for the Sideblinder app"
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "sideblinder-gui"
path = "src/main.rs"

[dependencies]
sideblinder-ipc = { path = "../sideblinder-ipc" }
sideblinder-hid = { path = "../sideblinder-hid" }
sideblinder-app = { path = "../sideblinder-app" }
egui.workspace = true
eframe.workspace = true
egui_plot.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
toml_edit.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
