[package]
name = "sideblinder-hid"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "HID communication and FFB encoding for the Microsoft Sidewinder Force Feedback 2"
readme = "README.md"

[lints]
workspace = true

[dependencies]
windows-sys.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
