[package]
name = "sideblinder-ipc"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "IPC protocol definitions for Sideblinder app-to-GUI communication"
readme = "README.md"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
