[package]
name = "sidewinder-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "sidewinder_app"
path = "src/lib.rs"

[[bin]]
name = "sidewinder-app"
path = "src/main.rs"

[dependencies]
sidewinder-hid = { path = "../sidewinder-hid" }
sidewinder-ipc = { path = "../sidewinder-ipc" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
windows-sys.workspace = true
notify = "7"

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
