[package]
name = "sidewinder-diag"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
sidewinder-hid = { path = "../sidewinder-hid" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
windows-sys.workspace = true
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
tempfile = "3.27"
