[package]
name = "sidewinder-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "sidewinder-gui"
path = "src/main.rs"

[dependencies]
sidewinder-ipc = { path = "../sidewinder-ipc" }
sidewinder-hid = { path = "../sidewinder-hid" }
sidewinder-app = { path = "../sidewinder-app" }
egui.workspace = true
eframe.workspace = true
egui_plot.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
toml_edit.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
